--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -1,5 +1,5 @@
 author_image: /images/author.jpg
-description_markdown: "My name is **Jane Doe**, I like baking and eating sweet things."
+description_markdown: "My name is **Mallika**, I am a vegetarian, and I love to cook!"
 facebook: CloudCannon
 twitter: CloudCannonApp
 pinterest: pinterest
