--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ url: "https://spring-bat.cloudvent.net/"
 baseurl:
 google_analytics_key:
 newsletter_action:
-disqus_shortname:
+disqus_shortname: https-www-awesome-automations-com
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
