--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ disqus_shortname: mallikasdishes-com
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
 logo: /siteicon.png
 description: Mallika's Recipes
-author: Mallika
+author:
   name: Mallika Suresh
   email: nomail@nomail.com
   twitter: # twitter username without the @ symbol
