--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,8 +1,11 @@
-- name: Home
-  link: /
-- name: About
-  link: /about/
-- name: Recipes
-  link: /recipes/
-- name: Contact
-  link: /contact/
+- link: /
+  name: Home
+- link: /about/
+  name: About
+- link: 
+    - link: /recipes/curry/
+      name: curries
+    - link: /recipes/gravy/
+      name: "Gravy Curries"
+- link: /contact/
+  name: Contact
