--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ defaults:
       type: "posts"
     values:
       layout: "post"
-      push_sidebar_down: true
+      push_sidebar_down: false
       print_stylesheet: true
       comments: true
       _options:
