--- a/_config_dev.yml
+++ b/_config_dev.yml
@@ -1,3 +1,10 @@
+#
+# This config-file is only needed for development. Instead of changing the url
+# everytime you work locally on the project, you start both config-files, overwriting
+# the first one with the development variables needed.
+#
+# Start development with › $ bundle exec jekyll serve --config _config.yml,_config_dev.yml
+
 # Disable when not in production
 google_analytics_tracking_id: false
 
