--- a/_data/sidebar.yml
+++ b/_data/sidebar.yml
@@ -1,6 +1,6 @@
 author_image: /images/author.jpg
-description_markdown: "My name is **Mallika**, I am a vegetarian, and I love to cook!"
-facebook: CloudCannon
-twitter: CloudCannonApp
-pinterest: pinterest
-instagram: baking
+description_markdown: "My name is **Mallika**, and I LOVE to cook! If you are looking for South Indian Dishes, you are in luck! Hope you enjoy the recipes on my website."
+facebook: mallikasdishes
+twitter: mallikasdishes
+pinterest: mallikasdishes
+instagram: mallikasdishes
