--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ defaults:
       layout: "default"
   -
     scope:
-      path: "new.html"
+      path: "index.html"
     values:
       layout: "default"
       push_sidebar_down: true
