--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 # Site
 
 title: Mallika's Dishes
-url: "https://http://www.mallikasdishes.com/"
+url: "http://www.mallikasdishes.com/"
 baseurl:
 google_analytics_key:
 newsletter_action:
