--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ disqus_shortname: mallikasdishes-com
 logo: /siteicon.png
 description: Mallika's Recipes
 author:
-  name: Mallika Suresh
+  name: Mallika
   email: nomail@nomail.com
   twitter: # twitter username without the @ symbol
 social:
