--- a/_data/ingredients.yaml
+++ b/_data/ingredients.yaml
@@ -10,3 +10,27 @@
 - hindi: Poha
   english: beaten Rice
   telugu: Atukulu
+- hindi: Dalia
+  english: Broken Wheat
+  telugu: Godhuma Ravva
+- hindi: Kabuli Chana
+  english: White Chick Peas
+  telugu: Senagalu
+- hindi: Rajma
+  english: Kidney Beans
+  telugu: Chikkudu Kaya Ginjalu
+- hindi: Maida
+  english: Refined Flour
+  telugu: Maida
+- hindi: Chawal
+  english: Rice
+  telugu: Biyyam
+- hindi: Suji/Rava
+  english: Semolina
+  telugu: Ravva
+- hindi: Masoor dal
+  english: Red Lentils
+  telugu: Erra Kandi pappu
+- hindi: Toor Dal
+  english: Pigeon Pea
+  telugu: Kandi Pappu
