--- a/_data/ingredients.yaml
+++ b/_data/ingredients.yaml
@@ -34,3 +34,78 @@
 - hindi: Toor Dal
   english: Pigeon Pea
   telugu: Kandi Pappu
+- hindi: Ilāyachī
+  english: cardamom
+  telugu: Yalukulu
+- hindi: Kali Mirchi
+  english: Black Pepper
+  telugu: Miriyalu
+- hindi: Tej Patta
+  english: Bay leaves
+  telugu: Biriyani Akulu
+- hindi: Dālachīnī
+  english: Cinnamon
+  telugu: Dalchina Chakka
+- hindi: Lavaṃg
+  english: Cloves
+  telugu: Lavangam
+- hindi: Dhaniyā
+  english: Coriander Seeds
+  telugu: Dhaniyalu
+- hindi: Karīpattā
+  english: Curry Leaves
+  telugu: Karivepaku
+- hindi: Sauṃph
+  english: Fennel Seed
+  telugu: Sounf
+- hindi: Kasūrī methī (methī pattā)
+  english: Fenugreek Leaf
+  telugu: Menthi Aaku
+- hindi: Lahasun
+  english: Garlic
+  telugu: Vellulli
+- hindi: Adarak
+  english: Ginger
+  telugu: Allam
+- hindi: Aṃlā
+  english: Indian Gooseberry
+  telugu: Usirikaya
+- hindi: Sarasoṃ
+  english: White Mustard Seed
+  telugu: Tella Avalu
+- hindi: Rai
+  english: Brown Mustard Seeds
+  telugu: Avalu
+- hindi: Jāvitrī
+  English: Mace
+  telugu: Jāvitrī
+- hindi: jāyaphal
+  english: Nutmeg
+  telugu: Vakka
+- hindi: Tulsi
+  english: Basil
+  telugu: Tulasi
+- hindi: Khas-khas
+  english: Poppy Seed
+  telugu: Gasa Gasalu
+- hindi: Kesar
+  english: Saffron
+  telugu: Kesar
+- hindi: Til
+  english: Sesame Seed
+  telugu: Nuvvulu
+- hindi: Chakra Phul
+  english: Star Anise
+  telugu: Chakra Puvvu
+- hindi: Imli
+  english: Tamarind
+  telugu: Chintapandu
+- hindi: Haldi
+  english: Turmeric
+  telugu: Pasupu
+- hindi: Hara Mirchi
+  english: Green Chilli or Hot Green Pepper
+  telugu: Pachi Mirapakaya
+- hindi: Lal Mirchi
+  english: Red Chilli
+  telugu: Endu Mirapakaya
