--- a/_data/ingredients.yaml
+++ b/_data/ingredients.yaml
@@ -77,7 +77,7 @@
   english: Brown Mustard Seeds
   telugu: Avalu
 - hindi: Jāvitrī
-  English: Mace
+  english: Mace
   telugu: Jāvitrī
 - hindi: jāyaphal
   english: Nutmeg
