--- a/_data/ingredients.yaml
+++ b/_data/ingredients.yaml
@@ -1,114 +1,120 @@
 - hindi: Toor Dal
   english: Pigeon Pea
-  telugu: Kandi Pappu
+  telugu: కంది పప్పు
 - hindi: Chana Dal
-  telugu: Sanaga Pappu
+  telugu: శనగ పప్పు
   english: Split Chickpeas
 - hindi: Urad Dal
-  telugu: Minapa Pappu
+  telugu: మినప్పప్పు
   english: Split Black gram
 - hindi: Moong Dal
-  telugu: Pesara pappu
+  telugu: పెసర పప్పు
   english: Yellow gram
 - hindi: Masoor Dal
   english: Red Lentils
-  telugu: Erra Kandi pappu
+  telugu: ఎర్ర కంది పప్పు
 - hindi: Jeera
-  telugu: Jeela Karra
+  telugu: జీలకర్ర
   english: Cumin Seeds
 - hindi: Poha
   english: beaten Rice
-  telugu: Atukulu
+  telugu: అటుకులు
 - hindi: Dalia
   english: Broken Wheat
-  telugu: Godhuma Ravva
+  telugu: గోధుమ రవ్వ
 - hindi: Kabuli Chana
   english: White Chick Peas
-  telugu: Senagalu
+  telugu: శెనగలు
 - hindi: Rajma
   english: Kidney Beans
-  telugu: Chikkudu Kaya Ginjalu
+  telugu: చిక్కుడు గింజలు
 - hindi: Maida
   english: Refined Flour
-  telugu: Maida
+  telugu: మైదా
 - hindi: Chawal
   english: Rice
-  telugu: Biyyam
+  telugu: బియ్యం
 - hindi: Suji/Rava
   english: Semolina
-  telugu: Ravva
+  telugu: రవ్వ
 - hindi: Ilāyachī
   english: cardamom
-  telugu: Yalukulu
+  telugu: యాలుకులు
 - hindi: Kali Mirchi
   english: Black Pepper
-  telugu: Miriyalu
+  telugu: మిరియాలు
 - hindi: Tej Patta
   english: Bay leaves
-  telugu: Biriyani Akulu
+  telugu: బిరియాని ఆకు
 - hindi: Dālachīnī
   english: Cinnamon
-  telugu: Dalchina Chakka
+  telugu: దాల్చిన చక్క
 - hindi: Lavaṃg
   english: Cloves
-  telugu: Lavangam
+  telugu: లవంగాలు
 - hindi: Dhaniyā
   english: Coriander Seeds
-  telugu: Dhaniyalu
+  telugu: ధనియాలు
 - hindi: Karīpattā
   english: Curry Leaves
-  telugu: Karivepaku
+  telugu: కరివేపాకు
 - hindi: Sauṃph
   english: Fennel Seed
-  telugu: Sounf
+  telugu: సౌంఫ్
 - hindi: Kasūrī methī (methī pattā)
   english: Fenugreek Leaf
-  telugu: Menthi Aaku
+  telugu: మెంతి ఆకు
 - hindi: Lahasun
   english: Garlic
-  telugu: Vellulli
+  telugu: వెల్లుల్లిపాయ
 - hindi: Adarak
   english: Ginger
-  telugu: Allam
+  telugu: అల్లం
+- hindi: Gud
+  english: Jaggery
+  telugu: బెల్లం
 - hindi: Aṃlā
   english: Indian Gooseberry
-  telugu: Usirikaya
+  telugu: ఉసిరికాయ
 - hindi: Sarasoṃ
   english: White Mustard Seed
-  telugu: Tella Avalu
+  telugu: తెల్ల ఆవాలు
 - hindi: Rai
   english: Brown Mustard Seeds
-  telugu: Avalu
+  telugu: ఆవాలు
 - hindi: Jāvitrī
   english: Mace
-  telugu: Jāvitrī
+  telugu: జావిత్రి
 - hindi: jāyaphal
   english: Nutmeg
-  telugu: Vakka
+  telugu: వక్క
 - hindi: Tulsi
   english: Basil
-  telugu: Tulasi
+  telugu: తులసి
 - hindi: Khas-khas
   english: Poppy Seed
-  telugu: Gasa Gasalu
+  telugu: గసగసాలు
 - hindi: Kesar
   english: Saffron
-  telugu: Kesar
+  telugu: కేసరి
 - hindi: Til
   english: Sesame Seed
-  telugu: Nuvvulu
+  telugu: నువ్వులు
 - hindi: Chakra Phul
   english: Star Anise
-  telugu: Chakra Puvvu
+  telugu: చక్ర పువ్వు
 - hindi: Imli
   english: Tamarind
-  telugu: Chintapandu
+  telugu: చింతపండు
 - hindi: Haldi
   english: Turmeric
-  telugu: Pasupu
+  telugu: పసుపు
 - hindi: Hara Mirchi
   english: Green Chilli or Hot Green Pepper
-  telugu: Pachi Mirapakaya
+  telugu: పచ్చి మిరపకాయ
 - hindi: Lal Mirchi
   english: Red Chilli
-  telugu: Endu Mirapakaya
+  telugu: ఎండు మిరపకాయ
+- hindi: Asafoetida
+  english: Hing
+  telugu: ఇంగువ
